--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,22 @@
     <p>total data : <span id="totalData"></span></p>
 
     <div>
+        <label>
+            <input type="radio" name="count" value="1000">
+            1,000
+        </label>
+        <label>
+            <input type="radio" name="count" value="10000" checked>
+            10,000
+        </label>
+        <label>
+            <input type="radio" name="count" value="100000">
+            100,000
+        </label>
         <button type="button" id="insertButton">insert test data</button>
+    </div>
+    <div>
+        <button type="button" id="clearButton">clear test data</button>
     </div>
     <div>
         <a href="/download/excel/dto" download="download">download by dto</a>
@@ -21,11 +36,13 @@
     <script>
 
         const insertButton = document.getElementById('insertButton');
+        const clearButton = document.getElementById('clearButton');
 
         document.addEventListener('DOMContentLoaded', () => {
             getTotalData();
             insertButton.addEventListener('click', (event) => {
-                fetch('/test-data', {
+                const count = document.querySelector('input[name=count]:checked')?.value ?? 10000;
+                fetch(`/test-data?count=${count}`, {
                     method: 'post'
                 })
                     .then(response => {
@@ -33,6 +50,16 @@
                             getTotalData();
                         }
                     });
+            })
+            clearButton.addEventListener('click', (event) => {
+                fetch('/test-data', {
+                    method: 'delete'
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            getTotalData();
+                        }
+                    })
             })
         })
 
